CHANGELOG

2016-06-16 3.15.1

  * fix(json): avoid throwing when late JSON response
    fixes #284
  * fix(nodejs): allow universal lite applications
    require('algoliasearch/lite') should work to
    facilitate universal applications builds using
    the lite build on frontend

fixes #283

2016-06-07 3.15.0

  * feat(synonyms): add new synonyms API

2016-05-30 3.14.6

  * fix(places): allow empty credentials

2016-05-26 3.14.5

  * fix(window): don't assume window is here

  When required in a node context, we may load the browser build without
  using it. Just for testing other parts of it.

2016-05-25 3.14.4

  * fix(lite): lite package should have browse and browseFrom

2016-05-25 3.14.3

  * fix(retry): also retry on non search methods when DNS failure

    Before this commit, methods with no fallback support (basically every
    method) would fail at retry if the DNS error occured before the API
    client timeout.

    The behavior is now:
    - when a method with a fallback errors because of DNS failure we will
    switch to JSONP right away
    - when a method with no fallback errors because of DNS failure we will
    still retry

    We could use the same mechanism for both (= always try all hosts
    before JSONP) but I am not confident doing this change within a patch
    or minor version. We have too litle data on how blocked XHRS are
    triggered (async, sync?).

    fixes #250

    * fix(request strategy): comply with retry spec, no early JSONP switch

      This commit brings more conformance with request strategy
      specification by only raising timeout when there's a timeout.

      It also stop trying to switch to JSONP asap and always try all hosts
      using XHRS before.

2016-05-24 3.14.2

  * fix(request strategy): increments hostIndex (host adress) on fallback

    When we are switching to fallback, increment host index so that JSONP
    will use another host.
